--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "server": "node server/index.js",
     "client": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "cors": "^2.8.5",
